--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>
       JóPont
     </title>
-    <base href="https://jopont.github.io/jopont"/>
+    <base href="https://jopont.github.io/jopont/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="shortcut icon" href="./favicon.ico"/>
     <link rel="apple-touch-icon" sizes="76x76" href="./apple-icon.png"/>
